--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
 	<div class="dashboard-container">
 		<!-- Dashboard 1: Lights -->
 		<div class="dashboard lights">
-			<h2>Lights</h2>
+			<h2>Lights Dashboard</h2>
 			<iframe width="100%" height="100%" frameborder="0" src="https://stem.ubidots.com/app/dashboards/public/dashboard/UerROHTtsBvVclvbDbY9LRsYXG304pjeqVJcn0FHPok?nonavbar=true"></iframe>
 		</div>
 
 		<!-- Dashboard 2: Alarms -->
 		<div class="dashboard alarms">
-			<h2>Alarms</h2>
+			<h2>Alarms Dashboard</h2>
 			<iframe width="100%" height="100%" frameborder="0" src="https://stem.ubidots.com/app/dashboards/public/dashboard/OlQaavUBRP_SZfa3rXcbN3NFRJd9qyW7DQfzvHQDVrA?nonavbar=true"></iframe>
 		</div>
 		<!-- Dashboard 3: Temperature -->
 		<div class="dashboard temperature">
-			<h2>Temperature</h2>
+			<h2>Temperature Dashboard</h2>
 			<iframe width="100%" height="100%" frameborder="0" src="https://stem.ubidots.com/app/dashboards/public/dashboard/6RxivKfv_jVWT_bgXfoEr2A-bTO1xQLJuu4Pw7omkTY?nonavbar=true"></iframe>
 		</div>
 		
